--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,48 @@
 .signin-div {
-    max-width: 540px;
     margin: auto;
     box-shadow: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: cadetblue;
 
 }
 
+.row {
+    margin: 0 !important;
+}
+
 .signin-form {
-    background-color: darkgrey;
-    padding: 100px;
-    border-radius: 5px;
+    background-color: white;
+    border-radius: 20px;
+    opacity: 0.9;
+    padding: 30px;
+}
+
+.card {
+    transition: all 0.5s ease-in-out;
+}
+
+.card.hidden {
+    opacity: 0;
+    transform: scale(0.9);
+}
+
+
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+.selected {
+    background-color: #ddd;
 }
